--- a/default.css
+++ b/default.css
@@ -5,7 +5,7 @@ html, body {
 body {
 	margin: 0;
 	padding: 0;
-	background: #0DC92C url(images/img01.jpg) repeat;
+	background: #000000 url(images/img01.jpg) repeat;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 15px;
 	font-weight: 500;
@@ -436,11 +436,4 @@ a:hover{
 	width: 1100px;
 	margin: 10px auto 0px auto;
 }
-
-
-
-
-
-
-
 
