--- a/default.css
+++ b/default.css
@@ -70,7 +70,7 @@ hr {
 /** WRAPPER */
 
 #wrapper {
-	width: 1200px;
+	width: 1500px;
 	margin: 0px auto;
 	padding: 0px 0px 0px 0px;
 	background: #FFFFFF;
@@ -139,10 +139,11 @@ hr {
 /** MENU */
 
 #menu {
-	overflow: hidden;
-	width: 1100px;
+	overflow: wrap;
+	width: 1400px;
 	height: 70px;
 	margin: 0px 50px;
+	word-wrap: break-word;  
 	background: #AAAAAA;
 	font-size: 30px;
 	color: #000000;
