--- a/default.css
+++ b/default.css
@@ -96,7 +96,7 @@ hr {
 #logo {
 	width: 960px;
 	height: 80px;
-	margin: -100px auto 30px auto;
+	margin: -100px 400px 30px 100;
 	color: #000000;
 }
 
@@ -140,9 +140,9 @@ hr {
 
 #menu {
 	overflow: wrap;
-	width: 1400px;
+	width: 1200px;
 	height: 70px;
-	margin: 0px 50px;
+	margin: 0px 64px;
 	word-wrap: break-word;  
 	background: #AAAAAA;
 	font-size: 30px;
